welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:11: error: reassignment to val
    return posfinale=true
                    ^ColumnByColumn:10: error: type mismatch;
 found   : Unit
 required: Boolean
  if (setPos(getX(),getY()) == setPos(getMondeLargeur()-1, getMondeHauteur()-1)){
  ^